fix video on mobile - bootstrap responsive embed class was breaking it

--- a/app/styles/_signup-section.scss
+++ b/app/styles/_signup-section.scss
@@ -31,6 +31,11 @@ section {
       @include breakpoint(xxs) {
         padding-top: 40px;
       }
+      &.embed-responsive-item {
+        @include breakpoint(xxs) {
+          height: 150px;
+        }
+      }
     }
     .input-group {
       input {
